apps/nginx-helloworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
    spec:
      containers:
      - image: nginxdemos/hello
        imagePullPolicy: Always
        name: hello-world
        ports:
        - name: http
          containerPort: 80
