apps/nginx-helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-world
  name: hello-world
  annotations:
    nginx.org/server-snippets: "server_name ~^.*$;"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: hello-world
      port:
        number: 80
  rules:
  - host: "*.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
